Wed Apr  4 13:04:25 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/Notify_Service/Notify_Service.cpp:

          Added the missing parameter for %p in an ACE_ERROR_RETURN().

Wed Apr  4 11:40:33 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * MPC/config/utils.mpb:

          Renamed the after setting from Utils to TAO_Utils to reflect the
          change from Tue Apr  3 18:53:54 UTC 2007.

Wed Apr  4 11:36:10 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * tests/Bug_2677_Regression/Makefile.am:
        * tests/Bug_2735_Regression/Makefile.am:

          Added missing automake makefiles.

        * tests/Bug_2735_Regression/server.cpp:

          Fixed a compilation error on HP-UX.  They have some pretty simple
          macros defined (e.g., SERVER).

Tue Apr  3 19:08:44 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/orbsvcs/Event/ECG_UDP_Out_Endpoint.inl:

          Added static_cast to avoid conversion warning on MSVC8.

Tue Apr  3 18:53:54 UTC 2007  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/Utils.mpc:

          Changed project name from Utils to TAO_Utils to avoid namespace
          pollution, since MPC doesn't accept duplicate project names
          anywhere in the tree during generation.

Tue Apr  3 18:29:29 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * tests/Bug_2677_Regression/Bug_2677_Regression.mpc:

          Removed the redundant inheritance of taolib.

        * tests/Bug_2677_Regression/DllORB.h:
        * tests/Bug_2677_Regression/DllORB.cpp:

          Removed the requirement of threads from this test.  It was not
          necessary to exercise the fix for 2677.

Tue Apr  3 16:10:10 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/orbsvcs/Notify/Notify_Constraint_Visitors.cpp:

          Fixed a couple of filtering issues:

          1) If exist was used in the form of "exist $.filterable_data(ident)",