@@ -6,3 +6,11 @@ ACE_RCSID (tao,
            IFR_Client_Adapter,
            "$Id$")
 
+TAO_BEGIN_VERSIONED_NAMESPACE_DECL
+
+TAO_IFR_Client_Adapter::~TAO_IFR_Client_Adapter ()
+{
+}
+
+TAO_END_VERSIONED_NAMESPACE_DECL
+
